bug fixes:: fixed bug in reimbursement tabbed list count badges introduced by initial implementation of the custom ReimbursementStatusPipe; removed console log message in reimbursement list component left behind during last development cycle; removed receipt presence detection login from reimbursement form validation for new reimbursement creation as this logic is handled by the daisy-chaining of receipt upload success detection prior to submitting the reimbursement object for persistence in the database

--- a/src/main/webapp/src/styles.css
+++ b/src/main/webapp/src/styles.css
@@ -1,5 +1,7 @@
 /* You can add global styles to this file, and also import other style files */
-{
+.revature-orange, 
+.navbar-brand ,
+.navbar-brand:hover {
 	color: rgb(242, 106, 37);
 }
 
@@ -15,10 +17,16 @@
 	font-weight: 700;
 }
 
-.revature-navbar .nav-link:hover {
+.revature-navbar .nav-link:hover,
+.revature-navbar .nav-link:visitied {
 	border-bottom:2px solid rgb(242, 106, 37);
 }
 
 p {
 	text-align: justify;
 }
+
+hr.revature {
+    background-color: rgb(242, 106, 37);
+}
+
